@@ -11,6 +11,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GREATClient.Windows", "GREA
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GREATLib", "GREATLib\GREATLib.csproj", "{74DBBE2A-15FA-4776-B611-9B06EAFE80C0}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GREATTests", "GREATTests\GREATTests.csproj", "{2598CA34-8AC1-4E22-8A9C-74521A771C12}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|x86 = Debug|x86
@@ -20,6 +22,11 @@ Global
 		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Debug|x86.ActiveCfg = Debug|x86
 		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Debug|x86.Build.0 = Debug|x86
 		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Release|x86.ActiveCfg = Release|x86
+		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Release|x86.Build.0 = Release|x86
+		{2598CA34-8AC1-4E22-8A9C-74521A771C12}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{2598CA34-8AC1-4E22-8A9C-74521A771C12}.Debug|x86.Build.0 = Debug|Any CPU
+		{2598CA34-8AC1-4E22-8A9C-74521A771C12}.Release|x86.ActiveCfg = Release|Any CPU
+		{2598CA34-8AC1-4E22-8A9C-74521A771C12}.Release|x86.Build.0 = Release|Any CPU
 		{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}.Debug|x86.ActiveCfg = Debug|Any CPU
 		{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}.Debug|x86.Build.0 = Debug|Any CPU
 		{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}.Release|x86.ActiveCfg = Release|Any CPU
